[package]
name = "analyse_wpt_results"
version = "0.1.0"
authors = ["Omar S. Navarro Leija <leija.this@gmail.com>"]
edition = "2018"
description = "Parse and provide useful data from running Servo's wpt-test --log-wptreport."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
rayon = "1.5"